# matrix-acceleration

./: .gitignore  CMakeLists.txt  ReadMe.md
api/: matrix.py
src/: common.cu  common.cuh  vector.cu  vector.cuh
test/: matrix-test.py
